--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # dependencies
-/node_modules
+/docs/node_modules
 /.pnp
 .pnp.js
 
@@ -15,6 +15,7 @@
 
 # misc
 .DS_Store
+/docs/.DS_Store
 
 # debug
 npm-debug.log*
