--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -1,5 +1,6 @@
 # dependencies
 /node_modules
+/docs/node_modules
 /.pnp
 .pnp.js
 
@@ -15,6 +16,7 @@
 
 # misc
 .DS_Store
+/docs/.DS_Store
 
 # debug
 npm-debug.log*
